--- a/week1/page1.html
+++ b/week1/page1.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>HTMLBasics</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 
@@ -25,7 +25,8 @@
     <p>
       I have no experience with web development and have never used HTML or CSS before.
       The closest I have come to "web development/design" is through using website
-      builders such as Weebly.com.
+      builders such as Weebly.com.  This will be my first time learning about web design
+      in a formal academic setting.
     </p>
   </section>
 
@@ -33,7 +34,10 @@
     <h2>What do I Hope to Learn</h2>
 
     <p>
-      Some Text Here.
+      I have always been interested in what all the code meant when you hit F12 and
+      opened up the browser devleper tools.  I am very interested to learn about how
+      to code using HTML and CSS as well as using JavaScript.  Learning JavaScript will be
+      especially useful to me since GeoGebra allows you to write code using JavaScript.
     </p>
   </section>
 
