--- a/week1/page2.html
+++ b/week1/page2.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>HTMLBasics</title>
   <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 
@@ -44,7 +44,47 @@
         </a>
         <br>
         <span>
-          Some text here.
+          The sunflower (as well as many other plants such as the pinecone) maximize
+          the area used in distributing their seeds by rotating by the Golden Ratio
+          after placing each seed.  You can see that the first image of the sunflower
+          corresponds to the middle diagram in the second image.  The diagrams to the
+          left and to the right show what sunflower seed distributions would look
+          like if they used different angles of rotation.  The GIF runs through multiple
+          distributions with varying angles of rotation.  This showcases some of the beauties
+          of mathematics and how they show up in nature.  For more details on this, check
+          out the following video <a href="https://youtu.be/sj8Sg8qnjOg">here.</a>
+        </span>
+      </li>
+
+      <!-- The Mandelbrot Set  -->
+      <li>
+        <a title="Created by Wolfgang Beyer with the program Ultra Fractal 3. / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:Mandel_zoom_00_mandelbrot_set.jpg">
+          <img width="512" alt="Mandel zoom 00 mandelbrot set" src="img/640px-Mandel_zoom_00_mandelbrot_set.jpg">
+        </a>
+        <br>
+        <span>
+          This is the ever famous Mandelbrot Set.  The Mandelbrot Set is most well-known
+          for all the zoom-in videos done on it.  The reason why these zoom-in videos are
+          so interesting is that the set is a fractal, and so no matter how close or far away
+          you zoom into the set, you will always end up seeing the same thing.  For those
+          mathematically inclined, a video on the Mandelbrot Set is included <a href="https://youtu.be/NGMRB4O922I">here.</a>
+          A zoom-in video can be viewed <a href="https://youtu.be/0jGaio87u3A">here.</a>
+          <br>
+          <strong>Caution!</strong>  The zoom contains a lot of colors that come at you.
+          Please exercise caution if you have any medical conditions that make the video dangerous
+          to watch.
+        </span>
+      </li>
+
+      <li>
+        <a title="Lucas Vieira / Public domain" href="https://commons.wikimedia.org/wiki/File:Mug_and_Torus_morph.gif">
+          <img width="128" alt="Mug and Torus morph" src="img/Mug_and_Torus_morph.gif">
+        </a>
+        <br>
+        <span>
+          Here is a GIF showing that mathematically, a torus (often referred to as a donut) is
+          the same as a coffee mug.  So now you too can be in on the joke about how donuts are
+          just coffee mugs.
         </span>
       </li>
     </ul>
