--- a/week1/index.html
+++ b/week1/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTMLBasics</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.7.0/modern-normalize.min.css">
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
