--- a/week1/page2.html
+++ b/week1/page2.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-    <h1>Some Interesting Pictures</h1>
+    <h1 class="logo-text">Some Interesting Pictures</h1>
   </header>
   <nav>
     <ul>
@@ -22,70 +22,71 @@
   <section>
     <h2>The Images</h2>
 
-    <ul>
+    <ul class="thumbnail-list">
       <!-- An image of an actual sunflower -->
-      <li>
-        <a title="Anna Benczur / CC BY-SA (https://creativecommons.org/licenses/by-sa/4.0)" href="https://commons.wikimedia.org/wiki/File:Fibonacci_spiral.jpg">
-          <img width="320" alt="Fibonacci spiral" src="img/320px-Fibonacci_spiral.jpg">
+      <li class="thumbnail-item">
+        <a class="thumbnail-href" title="Anna Benczur / CC BY-SA (https://creativecommons.org/licenses/by-sa/4.0)" href="https://commons.wikimedia.org/wiki/File:Fibonacci_spiral.jpg">
+          <img class="thumbnail-image" width="320" alt="Fibonacci spiral" src="img/320px-Fibonacci_spiral.jpg">
         </a>
       </li>
 
       <!-- An image of sunflower seeds at different angles of rotation -->
-      <li>
-        <a title="Salix alba at English Wikipedia / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:Sunflower_spiral.png">
-          <img width="512" alt="Sunflower spiral" src="img/Sunflower_spiral.png">
+      <li class="thumbnail-item">
+        <a class="thumbnail-href" title="Salix alba at English Wikipedia / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:Sunflower_spiral.png">
+          <img class="thumbnail-image" width="512" alt="Sunflower spiral" src="img/Sunflower_spiral.png">
         </a>
       </li>
 
       <!-- A gif of sunflower seeds at different angles -->
-      <li>
-        <a title="Struthious Bandersnatch / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:Dotswirl.gif">
-          <img width="256" alt="Dotswirl" src="img/Dotswirl.gif">
+      <li class="thumbnail-item">
+        <a class="thumbnail-href" title="Struthious Bandersnatch / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:Dotswirl.gif">
+          <img class="thumbnail-image" width="256" alt="Dotswirl" src="img/Dotswirl.gif">
+          <span class="thumbnail-title">
+            The sunflower (as well as many other plants such as the pinecone) maximize
+            the area used in distributing their seeds by rotating by the Golden Ratio
+            after placing each seed.  You can see that the first image of the sunflower
+            corresponds to the middle diagram in the second image.  The diagrams to the
+            left and to the right show what sunflower seed distributions would look
+            like if they used different angles of rotation.  The GIF runs through multiple
+            distributions with varying angles of rotation.  This showcases some of the beauties
+            of mathematics and how they show up in nature.  For more details on this, check
+            out the following video <a class="thumbnail-title" href="https://youtu.be/sj8Sg8qnjOg">here.</a>
+          </span>
         </a>
-        <br>
-        <span>
-          The sunflower (as well as many other plants such as the pinecone) maximize
-          the area used in distributing their seeds by rotating by the Golden Ratio
-          after placing each seed.  You can see that the first image of the sunflower
-          corresponds to the middle diagram in the second image.  The diagrams to the
-          left and to the right show what sunflower seed distributions would look
-          like if they used different angles of rotation.  The GIF runs through multiple
-          distributions with varying angles of rotation.  This showcases some of the beauties
-          of mathematics and how they show up in nature.  For more details on this, check
-          out the following video <a href="https://youtu.be/sj8Sg8qnjOg">here.</a>
-        </span>
       </li>
 
       <!-- The Mandelbrot Set  -->
-      <li>
-        <a title="Created by Wolfgang Beyer with the program Ultra Fractal 3. / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:Mandel_zoom_00_mandelbrot_set.jpg">
-          <img width="512" alt="Mandel zoom 00 mandelbrot set" src="img/640px-Mandel_zoom_00_mandelbrot_set.jpg">
+      <li class="thumbnail-item">
+        <a class="thumbnail-href" title="Created by Wolfgang Beyer with the program Ultra Fractal 3. / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:Mandel_zoom_00_mandelbrot_set.jpg">
+          <img class="thumbnail-image" width="512" alt="Mandel zoom 00 mandelbrot set" src="img/640px-Mandel_zoom_00_mandelbrot_set.jpg">
+          <span class="thumbnail-title">
+            This is the ever famous Mandelbrot Set.  The Mandelbrot Set is most well-known
+            for all the zoom-in videos done on it.  The reason why these zoom-in videos are
+            so interesting is that the set is a fractal, and so no matter how close or far away
+            you zoom into the set, you will always end up seeing the same thing.  For those
+            mathematically inclined, a video on the Mandelbrot Set is included <a class="thumbnail-title" href="https://youtu.be/NGMRB4O922I">here.</a>
+          </span>
+          <span class="thumbnail-title">
+            A zoom-in video can be viewed <a class="thumbnail-title" href="https://youtu.be/0jGaio87u3A">here.</a>
+          </span>
+            <br>
+          <span class="thumbnail-title">
+            <strong>Caution!</strong>  The zoom contains a lot of colors that come at you.
+            Please exercise caution if you have any medical conditions that make the video dangerous
+            to watch.
+          </span>
         </a>
-        <br>
-        <span>
-          This is the ever famous Mandelbrot Set.  The Mandelbrot Set is most well-known
-          for all the zoom-in videos done on it.  The reason why these zoom-in videos are
-          so interesting is that the set is a fractal, and so no matter how close or far away
-          you zoom into the set, you will always end up seeing the same thing.  For those
-          mathematically inclined, a video on the Mandelbrot Set is included <a href="https://youtu.be/NGMRB4O922I">here.</a>
-          A zoom-in video can be viewed <a href="https://youtu.be/0jGaio87u3A">here.</a>
-          <br>
-          <strong>Caution!</strong>  The zoom contains a lot of colors that come at you.
-          Please exercise caution if you have any medical conditions that make the video dangerous
-          to watch.
-        </span>
       </li>
 
-      <li>
-        <a title="Lucas Vieira / Public domain" href="https://commons.wikimedia.org/wiki/File:Mug_and_Torus_morph.gif">
-          <img width="128" alt="Mug and Torus morph" src="img/Mug_and_Torus_morph.gif">
+      <li class="thumbnail-item">
+        <a class="thumbnail-href" title="Lucas Vieira / Public domain" href="https://commons.wikimedia.org/wiki/File:Mug_and_Torus_morph.gif">
+          <img class="thumbnail-image" width="128" alt="Mug and Torus morph" src="img/Mug_and_Torus_morph.gif">
+          <span class="thumbnail-title">
+            Here is a GIF showing that mathematically, a torus (often referred to as a donut) is
+            the same as a coffee mug.  So now you too can be in on the joke about how donuts are
+            just coffee mugs.
+          </span>
         </a>
-        <br>
-        <span>
-          Here is a GIF showing that mathematically, a torus (often referred to as a donut) is
-          the same as a coffee mug.  So now you too can be in on the joke about how donuts are
-          just coffee mugs.
-        </span>
       </li>
     </ul>
   </section>
