--- a/week1/page1.html
+++ b/week1/page1.html
@@ -12,9 +12,9 @@
     <h1>Why Am I in This Course?</h1>
   </header>
   <nav>
-    <ul>
+    <ul class="nav-top">
       <li><a href="index.html">Home</a></li>
-      <li><strong>Why Am I in This Course?</strong></li>
+      <li class="active"><strong>Why Am I in This Course?</strong></li>
       <li><a href="page2.html">Some Interesting Pictures</a></li>
     </ul>
   </nav>
