--- a/week1/page2.html
+++ b/week1/page2.html
@@ -12,10 +12,10 @@
     <h1 class="logo-text">Some Interesting Pictures</h1>
   </header>
   <nav>
-    <ul>
+    <ul class="nav-top">
       <li><a href="index.html">Home</a></li>
       <li><a href="page1.html">Why Am I in This Course?</a></li>
-      <li><strong>Some Interesting Pictures</strong></li>
+      <li class="active"><strong>Some Interesting Pictures</strong></li>
     </ul>
   </nav>
 
