--- a/week1/index.html
+++ b/week1/index.html
@@ -12,31 +12,59 @@
 <body>
   <header>
     <h1>Week 1 - HTML Basics</h1>
-
-    <a title="Rovnet / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:Math.jpg">
-      <img width="256" alt="Math" src="img/Math.jpg">
-    </a>
   </header>
 
   <main>
     <nav>
-      <ul>
-        <li><strong>Home</strong></li>
+      <ul class="nav-top">
+        <li class="active"><strong>Home</strong></li>
         <li><a href="page1.html">Why Am I in This Course?</a></li>
         <li><a href="page2.html">Some Interesting Pictures</a></li>
       </ul>
     </nav>
 
+    <div class="detail-image-container">
+      <a title="Rovnet / CC BY-SA (http://creativecommons.org/licenses/by-sa/3.0/)" href="https://commons.wikimedia.org/wiki/File:Math.jpg">
+        <img class="detail-image" width="256" alt="Math" src="img/Math.jpg">
+      </a>
+    </div>
+
     <section>
       <h2>About Me</h2>
 
       <p>
-        Hello!  My name is Kyle Vu, and I am a huge purple dinosaur with a flaming head
-        and two tails.  I am a senior at Dino Gate Academy studying to be a mathematician.
+        Hello! My name is Kyle Vu, and I am a huge purple dinosaur with a flaming head
+        and two tails. I am a senior at Dino Gate Academy studying to be a mathematician.
         My interests include running, hunting, dodging magma from volcano eruptions and
         surviving meteorites from outer space.
       </p>
     </section>
+
+    <h2>Contact Me</h2>
+
+    <form class="form-contact" action="index.html" method="post">
+      <ul>
+        <li>
+          <label for="_name">Name:</label>
+          <input type="text" id="_name" name="user_name">
+        </li>
+
+        <li>
+          <label for="_mail">E-mail:</label>
+          <input type="email" id="_mail" name="user_email">
+        </li>
+
+        <li>
+          <label for="_msg">Message:</label>
+          <textarea id="msg" name="user_msg"></textarea>
+        </li>
+
+        <li class="button">
+          <button type="submit" name="button_submit">Submit</button>
+        </li>
+      </ul>
+
+    </form>
 
   </main>
 
